<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>restaurant-service</artifactId>
  <build>
    <plugins>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
            </exclude>
          </excludes>
        </configuration>
        <groupId>org.springframework.boot</groupId>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-actuator</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-rest</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-hateoas</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-integration</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-webflux</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-data-rest-hal-explorer</artifactId>
      <groupId>org.springframework.data</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-integration-jpa</artifactId>
      <groupId>org.springframework.integration</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-integration-kafka</artifactId>
      <groupId>org.springframework.integration</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-integration-webflux</artifactId>
      <groupId>org.springframework.integration</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-kafka</artifactId>
      <groupId>org.springframework.kafka</groupId>
    </dependency>

    <dependency>
      <artifactId>spring-boot-devtools</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>commons</artifactId>
      <groupId>com.commons</groupId>
      <version>0.0.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <artifactId>micrometer-tracing-bridge-brave</artifactId>
      <groupId>io.micrometer</groupId>
      <version>1.0.2</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
    <dependency>
      <artifactId>commons-lang3</artifactId>
      <groupId>org.apache.commons</groupId>
      <version>3.12.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.google.collections/google-collections -->
    <dependency>
      <artifactId>google-collections</artifactId>
      <groupId>com.google.collections</groupId>
      <version>1.0</version>
    </dependency>
    <dependency>
      <artifactId>liquibase-core</artifactId>
      <groupId>org.liquibase</groupId>
    </dependency>
    <dependency>
      <artifactId>jackson-datatype-jsr310</artifactId>
      <groupId>com.fasterxml.jackson.datatype</groupId>
    </dependency>
    <dependency>
      <artifactId>httpclient</artifactId>
      <groupId>org.apache.httpcomponents</groupId>
      <version>4.5.10</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>reactor-test</artifactId>
      <groupId>io.projectreactor</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-integration-test</artifactId>
      <groupId>org.springframework.integration</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-kafka-test</artifactId>
      <groupId>org.springframework.kafka</groupId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <description>restaurant-service</description>
  <groupId>com.example</groupId>
  <modelVersion>4.0.0</modelVersion>
  <name>restaurant-service</name>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>2.7.9</version> <!-- lookup parent from repository -->
  </parent>
  <properties>
    <java.version>17</java.version>
  </properties>

  <version>0.0.1-SNAPSHOT</version>

</project>
